all: rename Acteur to Tiers
fix #2005 :'Traductions: renommer Acteur en Tiers a ts les endroits'
http://rietveld.coopengo.com/18060001

--- a/modules/account_cog/locale/fr_FR.po
+++ b/modules/account_cog/locale/fr_FR.po
@@ -413,7 +413,7 @@ msgstr "Paiements"
 
 msgctxt "field:party.synthesis.menu.move.line,party:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "field:party.synthesis.menu.move.line,rec_name:"
 msgid "Name"
@@ -513,7 +513,7 @@ msgstr "Taxes"
 
 msgctxt "model:party.synthesis.menu.move.line,name:"
 msgid "Party Synthesis Menu Move line"
-msgstr "Menu Paiement Synthèse Acteur "
+msgstr "Menu Paiement Synthèse Tiers "
 
 msgctxt "selection:account.fee.description.version,kind:"
 msgid "Flat"
