--- a/modules/contract_insurance_process/locale/fr_FR.po
+++ b/modules/contract_insurance_process/locale/fr_FR.po
@@ -80,7 +80,7 @@ msgstr "Modèle"
 
 msgctxt "field:contract.subscribe.find_process,party:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "field:contract.subscribe.find_process,product:"
 msgid "Product"
