--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -1555,7 +1555,7 @@ msgstr "Société"
 
 msgctxt "selection:offered.item.description,kind:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "selection:offered.item.description,kind:"
 msgid "Person"
