--- a/modules/claim_process/locale/fr_FR.po
+++ b/modules/claim_process/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -80,7 +80,7 @@ msgstr "Modèle"
 
 msgctxt "field:claim.declare.find_process,party:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "field:claim.loss,benefit_to_deliver:"
 msgid "Benefit"
