--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -818,7 +818,7 @@ msgstr "Quittances"
 
 msgctxt "field:party.synthesis.menu.invoice,party:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "field:party.synthesis.menu.invoice,rec_name:"
 msgid "Name"
