--- a/modules/health/locale/fr_FR.po
+++ b/modules/health/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -40,7 +40,7 @@ msgstr "ID"
 
 msgctxt "field:health.party_complement,party:"
 msgid "Party"
-msgstr "Acteur"
+msgstr "Tiers"
 
 msgctxt "field:health.party_complement,rec_name:"
 msgid "Name"
@@ -104,7 +104,7 @@ msgstr "Configuration"
 
 msgctxt "model:ir.ui.menu,name:menu_health_party"
 msgid "Actors"
-msgstr "Acteurs"
+msgstr "Tiers"
 
 msgctxt "model:ir.ui.menu,name:menu_person_form"
 msgid "Persons"
