loan: Force user to calculate loan amortization table Fix #1923 review: http://rietveld.coopengo.com/14300001/

--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -16,6 +16,10 @@ msgid "There must be at least one loan"
 msgstr "Il doit y avoir au moins un prêt"
 
 msgctxt "error:loan:"
+msgid "Amortization table must be calculated"
+msgstr "La table d'amortissement doit être calculée"
+
+msgctxt "error:loan:"
 msgid "No loan sequence defined"
 msgstr "Pas de séquence de prêt définie"
 
@@ -882,10 +886,6 @@ msgid "Amortization Table"
 msgstr "Table d'Amortissement"
 
 msgctxt "view:loan:"
-msgid "Calculate Amortization Table"
-msgstr "Calculer la table d'amortissement"
-
-msgctxt "view:loan:"
 msgid "Loan"
 msgstr "Prêt"
 
@@ -900,6 +900,10 @@ msgstr "Prêts"
 msgctxt "view:loan:"
 msgid "Quota share"
 msgstr "Quotité"
+
+msgctxt "view:loan:"
+msgid "_Calculate Amortization Table"
+msgstr "_Calculer la table d'amortissement"
 
 msgctxt "view:loan:"
 msgid "_Draft"
