contract_insurance: Add button to relaunch extra premium wizard at the end of the wizard Fix #1924 review: http://rietveld.coopengo.com/14270001/

--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -1094,3 +1094,8 @@ msgctxt ""
 "wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
 msgid "Next"
 msgstr "Suivant"
+
+msgctxt ""
+"wizard_button:contract.option.extra_premium.create,select_options,apply_and_relaunch:"
+msgid "Apply & New"
+msgstr "Appliquer & Nouvelle"
