--- a/modules/contract_life_clause/locale/fr_FR.po
+++ b/modules/contract_life_clause/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -85,6 +85,14 @@ msgstr "Identifiant XML"
 msgctxt "model:contract.contact.type,name:accepting_benef"
 msgid "Accepting Beneficiary"
 msgstr "Bénéficiaire acceptant"
+
+msgctxt "model:contract.contact.type,name:covered_party"
+msgid "Covered Party"
+msgstr "Assuré"
+
+msgctxt "model:contract.contact.type,name:subscriber"
+msgid "Subscriber"
+msgstr "Souscripteur"
 
 msgctxt "model:contract.option.beneficiary,name:"
 msgid "Contract Beneficiary"
