party_cog: add relate form to display related parties
fix #1946:'Mise en place de liens directs entre differentes notions'
http://rietveld.coopengo.com/16190002

--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -660,6 +660,10 @@ msgctxt "model:ir.action,name:act_person_form"
 msgid "Persons"
 msgstr "Personnes"
 
+msgctxt "model:ir.action,name:act_related_parties_relate_form"
+msgid "Related parties"
+msgstr "Tiers liés"
+
 msgctxt "model:ir.action,name:start_synthesis_menu"
 msgid "Synthesis"
 msgstr "Synthèse"
