--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -665,6 +665,10 @@ msgctxt "field:contract.option.extra_premium,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
 
+msgctxt "field:contract.option.extra_premium,time_limited:"
+msgid "Time Limited"
+msgstr "Durée Limitée"
+
 msgctxt "field:contract.option.extra_premium,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -1076,6 +1080,11 @@ msgid "Apply"
 msgstr "Appliquer"
 
 msgctxt ""
+"wizard_button:contract.option.extra_premium.create,select_options,apply_and_relaunch:"
+msgid "Apply & New"
+msgstr "Appliquer & Nouvelle"
+
+msgctxt ""
 "wizard_button:contract.option.extra_premium.create,select_options,end:"
 msgid "Cancel"
 msgstr "Annuler"
@@ -1094,8 +1103,3 @@ msgctxt ""
 "wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
 msgid "Next"
 msgstr "Suivant"
-
-msgctxt ""
-"wizard_button:contract.option.extra_premium.create,select_options,apply_and_relaunch:"
-msgid "Apply & New"
-msgstr "Appliquer & Nouvelle"
