report_engine : make conversion to pdf optional, make produce_reports more versatile http://rietveld.coopengo.com/14210001/

--- a/modules/report_engine/locale/fr_FR.po
+++ b/modules/report_engine/locale/fr_FR.po
@@ -117,6 +117,10 @@ msgctxt "field:report.template,code:"
 msgid "Code"
 msgstr "Code"
 
+msgctxt "field:report.template,convert_to_pdf:"
+msgid "Convert to pdf"
+msgstr "Convertir en pdf"
+
 msgctxt "field:report.template,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -173,6 +177,10 @@ msgctxt "field:report.template,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
+msgctxt "field:report.template,split_reports:"
+msgid "Split Reports"
+msgstr "Scinder les documents"
+
 msgctxt "field:report.template,tags:"
 msgid "Tags"
 msgstr "Labels"
@@ -180,6 +188,10 @@ msgstr "Labels"
 msgctxt "field:report.template,tags_name:"
 msgid "Tags"
 msgstr "Labels"
+
+msgctxt "field:report.template,template_extension:"
+msgid "Template Extension"
+msgstr "Extension du modèle"
 
 msgctxt "field:report.template,versions:"
 msgid "Versions"
@@ -333,6 +345,14 @@ msgstr ""
 "Mettre à vrai si vous voulez editer le document généré avant de l'imprimer "
 "ou de l'envoyer par mail"
 
+msgctxt "help:report.template,split_reports:"
+msgid ""
+"If checked, one document will be produced for each object. If not checked a "
+"single document will be produced for several objects."
+msgstr ""
+"Si coché, un document sera produit pour chaque objet. Si décoché, un seul "
+"document sera produit pour plusieurs objets."
+
 msgctxt "model:ir.action,name:act_doc_template"
 msgid "Document Templates"
 msgstr "Modèles de courriers"
@@ -393,6 +413,22 @@ msgctxt "model:res.group,name:group_report_admin"
 msgid "Report Administration"
 msgstr "Administration des courriers/rapports"
 
+msgctxt "selection:report.template,template_extension:"
+msgid "Open Document Graphics (.odg)"
+msgstr "Dessin Open Document"
+
+msgctxt "selection:report.template,template_extension:"
+msgid "Open Document Presentation (.odp)"
+msgstr "Présentation Open Document"
+
+msgctxt "selection:report.template,template_extension:"
+msgid "Open Document Spreadsheet (.ods)"
+msgstr "Tableau Open Document"
+
+msgctxt "selection:report.template,template_extension:"
+msgid "Open Document Text (.odt)"
+msgstr "Texte Open Document"
+
 msgctxt "selection:report.template.version,resource:"
 msgid "Document Template"
 msgstr "Modèle de courrier"
@@ -428,6 +464,10 @@ msgstr "Version d'un modèle de courrier"
 msgctxt "view:report.template.version:"
 msgid "Report Template Versions"
 msgstr "Versions d'un modèle de courrier"
+
+msgctxt "view:report.template:"
+msgid "Automatic Generation"
+msgstr "Génération automatique"
 
 msgctxt "view:report.template:"
 msgid "Mail"
