--- a/modules/loan/CHANGELOG
+++ b/modules/loan/CHANGELOG
@@ -1,3 +1,6 @@
+* Allow to have different payment frequency during the life of the loan (one per increment)
+* Allow to enter the loan duration in month or year, regardless of the payment frequency
+
 Version 1.4 - 2015-05-29
 * Allow user to force loan modification even if there is another active contract using it
 
