contract: UI fixes and fix error message on activation history review: http://rietveld.coopengo.com/16330001/

--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -35,7 +35,7 @@ msgstr "Pas de contrat trouvé"
 
 msgctxt "error:contract:"
 msgid "Activation Periods \"%(first)s\" and \"%(second)s\" overlap."
-msgstr "Les périodes \"%(première)s\" et \"%(seconde)s\" se chevauchent"
+msgstr "Les périodes \"%(first)s\" et \"%(second)s\" se chevauchent"
 
 msgctxt "error:contract:"
 msgid ""
